// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefixing css 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
>
  hello world
</div>
`;

exports[`prefixing styled 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="e1q5zpw60 glamor-0"
>
  hello world
</div>
`;
